db-svc-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-psql
  namespace: carshop
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: db-psql

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-psql
  namespace: carshop
spec:
  serviceName: db-psql
  replicas: 1
  selector:
    matchLabels:
      app: db-psql
  template:
    metadata:
      labels:
        app: db-psql
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-volume
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - myuser
                - -d
                - mydb
            initialDelaySeconds: 10
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: db-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
