deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-carshop
  namespace: carshop
spec:
  selector:
    app: web-carshop
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-carshop
  namespace: carshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-carshop
  template:
    metadata:
      labels:
        app: web-carshop
    spec:
      containers:
        - name: web-carshop
          image: ghcr.io/ttala/carshop-api:a135195cd77d4137175dd967c3539d05ad175e10
          #workingDir: /app
          #command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
      imagePullSecrets:
        - name: ghcr-secret
          ports:
            - containerPort: 8000
