ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carshop-api-ingress
  namespace: carshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: carshop.kerocam.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web-carshop
                port:
                  number: 8000
